# fcitx5-minimal

./: README.md  meson.build  minimal-addon.conf.in.in  minimal.conf.in  minimal.hpp
